# demand-investigator-agent

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/demand_investigator/: __init__.py
tests/: test_hello.py
