[project]
name = "demand-investigator"
version = "0.1.0"
description = "Autonomous agent for handling anomalies in CPG demand forecasts."
license = { file = "LICENSE" }
readme = "README.md"
authors = [
    { name = "Hillary Cheruiyot", email = "hcheruiyot17@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/demand_investigator"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]
