[project]
name = "demand-investigator"
version = "0.1.0"
description = "Autonomous agent for handling anomalies in CPG demand forecasts."
license = { file = "LICENSE" }
readme = "README.md"
authors = [
    { name = "Hillary Cheruiyot", email = "hcheruiyot17@gmail.com" }
]
requires-python = ">=3.11,<3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/demand_investigator"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [ "F", "N", "SIM", "C4", "ARG", "RUF" , "E", "W", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
files = [ "src" ]

[tool.pytest.ini_options]
testpaths = [ "tests" ]
addopts = "-ra --strict-markers --strict-config"
